--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
     <properties>
         <sr_scala.version>${env.STARROCKS_SCALA_VERSION}</sr_scala.version>
         <sr_spark.version>${env.STARROCKS_SPARK_VERSION}</sr_spark.version>
-        <scala-lang.version>2.12.10</scala-lang.version>
+        <scala-lang.version>2.12.18</scala-lang.version>
         <libthrift.version>0.14.0</libthrift.version>
         <arrow.version>5.0.0</arrow.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -70,7 +70,7 @@
         <httpcore.version>4.4.15</httpcore.version>
         <fastjson.version>1.2.83</fastjson.version>
         <starrocks.streamload.version>1.2.9-ve-3</starrocks.streamload.version>
-        <starrocks.format.sdk.version>1.0.0.40</starrocks.format.sdk.version>
+        <starrocks.format.sdk.version>1.0.1-SNAPSHOT</starrocks.format.sdk.version>
     </properties>
 
     <profiles>
